Added working swagger documentation, and updated code
