# Api_Site/api/routes/AwdContactTypeMappingsRoutes.js
@@ -5,7 +5,7 @@ module.exports = function(webserver) {
     webserver.route('/MailEnhancement/api/v1/AwdContactTypeMappings')
         .post(controller.create_a_AwdContactTypeMapping)
         .get(controller.get_all_AwdContactTypeMappings);
-    webserver.route('/MailEnhancement/api/v1/AwdContactTypeMappings/:AwdContactTypeMappingId')
+    webserver.route('/MailEnhancement/api/v1/AwdContactTypeMappings/:Id')
         .get(controller.read_a_AwdContactTypeMapping)
         .put(controller.update_a_AwdContactTypeMapping)
         .delete(controller.delete_a_AwdContactTypeMapping);
