# Api_Site/swagger.json
@@ -1,37 +1,192 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "title": "title",
-    "description": "deasctiption",
-    "version": "1.0"
-  },
-  "produces": [
-    "application/json"
-  ],
-  "paths": {
-    "/test": {
-      "get": {
-        "x-swagger-router-controller": "home",
-        "operationId": "index",
-        "tags": [
-          "/test"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/bar": {
-      "get": {
-        "x-swagger-router-controller": "bar",
-        "operationId": "impossible",
-        "tags": [
-          "/first"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    }
-  }
+	"swagger": "2.0",
+	"info": {
+		"description": "This is a email enhancement system , that adds signatures at the bottom of emails or any other correspondence.",
+		"version": "1.0.0",
+		"title": "Mail enhancement API documentation"
+	},
+	"host": "localhost:4010/MailEnhancement/api",
+	"basePath": "/v1/",
+	"tags": [
+		{
+			"name": "AwdContactTypeMappings",
+			"description": "Link AWD regions and roles to contact types.",
+			"externalDocs": {
+				"description": "Find out more",
+				"url": "http://localhost:4010/api/help"
+			}
+		}
+	],
+	"schemes": [
+		"http"
+	],
+	"paths": {
+		"/AwdContactTypeMappings": {
+			"get": {
+				"tags": [
+					"AwdContactTypeMappings"
+				],
+				"description": "Get all the AwdContactTypeMappings from the database.",
+				"parameters": [],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+
+			"post": {
+				"tags": [
+					"AwdContactTypeMappings"
+				],
+				"description": "Create a new AwdContactTypeMapping on the database.",
+				"parameters": [
+					{
+						"in": "body",
+						"name": "body",
+						"description": "AWD contact mapping that needs to be added to the system",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/AwdContactTypeMappingsDef"
+						}
+					}
+				],
+				"responses": {
+					"201": {
+						"description": "Created"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			}
+
+		},
+		"/AwdContactTypeMappings/{Id}": {
+			"get": {
+				"tags": [
+					"AwdContactTypeMappings"
+				],
+				"description": "Get the AwdContactTypeMappings from the database by the id.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of AWD contact type mapping that needs to be fetched",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+			"put":{
+				"tags": [
+					"AwdContactTypeMappings"
+				],
+				"description": "Update a record on the database.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of AWD contact type mapping that needs to be edited",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					},
+					{
+						"in": "body",
+						"name": "body",
+						"description": "AWD contact mapping that needs to be edited",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/AwdContactTypeMappingsDef"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+			"delete": {
+				"tags": [
+					"AwdContactTypeMappings"
+				],
+				"description": "Delete a record from the database.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of AWD contact type mapping that needs to be removed",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			}
+		}
+	
+},
+"definitions": {
+	"AwdContactTypeMappingsDef": {
+		"type": "object",
+		"required": [
+			"contactTypeId",
+			"awdRegion",
+			"awdContactRole",
+			"name",
+			"description"
+		],
+		"properties": {
+			"contactTypeId": {
+				"type": "integer",
+				"format": "int32",
+				"example": 1
+			},
+			"awdRegion": {
+				"type": "string",
+				"example": "awdRegion"
+			},
+			"awdContactRole": {
+				"type": "string",
+				"example": "awdContactRole"
+			},
+			"name": {
+				"type": "string",
+				"example": "name"
+			},
+			"description": {
+				"type": "string",
+				"example": "description"
+			},
+			"inActive": {
+				"type": "bool",
+				"example": false
+			}
+		}
+	}
+}
 }
